xml 정리 거의 완료 (02~04 / 05~13 분리)
17.8.2

--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -20,7 +20,9 @@
    "source": [
     "import os\n",
     "import re\n",
+    "import csv\n",
     "import xml.etree.ElementTree as et\n",
+    "import datetime as dt\n",
     "\n",
     "os.chdir('J:/data')"
    ]
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -225,139 +227,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 각 XML에서 원하는 element 뽑기\n",
-    "\n",
-    "App NO, DN, Assignee, Class 필요"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "일단 각각 element가 뭔지 보면 (등장 순서대로)  \n",
-    "DN : us-bibliographic-data-application / document-id / doc-number  \n",
-    "APP No : us-bibliographic-data-application / application-reference / doc-number  \n",
-    "Class : us-bibliographic-data-application / classification-national / main-classification  \n",
-    "__** issue : 3digit에서 0 제거 안 함__  ex) 312/29.1 = 312029001  \n",
-    "Assignee : us-bibliographic-data-application / assignees / addressbook / orgname"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "doc1 = sample.next()\n",
-    "doc2 = sample.next()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "root = et.fromstring(doc1)\n",
-    "root"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "root.find('us-bibliographic-data-application')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "list 만들어서 각 정보들 넣은 후, csv로 바꾸자  \n",
-    "dn, app no, assignee 담은 csv  \n",
-    "dn, app no, class 담은 csv  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "aline = []\n",
-    "cline = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# DN, APP NO 얻기\n",
-    "for dn in root.iter(\"doc-number\"):\n",
-    "    aline.append(dn.text)\n",
-    "    cline.append(dn.text)\n",
-    "    \n",
-    "print aline, cline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Assignee 얻기\n",
-    "for ass in root.iter('orgname'):\n",
-    "    aline.append(ass.text)\n",
-    "\n",
-    "aline.append('') if len(aline)==2 else aline\n",
-    "aline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Class 얻기\n",
-    "for ass in root.iter('main-classification'):\n",
-    "    rawclass = ass.text\n",
-    "    cline.append(str(int(rawclass[0:3])))\n",
-    "    if not int(rawclass[6:9]):\n",
-    "        cline.append(str(int(rawclass[3:6])))\n",
-    "    else:\n",
-    "        sub1 = str(int(rawclass[3:6]))\n",
-    "        sub2 = str(int(rawclass[6:9]))\n",
-    "        cline.append(sub1 + '.' + sub2)\n",
-    "\n",
-    "cline"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# xml 자동으로 불러오기"
    ]
   },
@@ -379,32 +248,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2007, 3, 8, 0, 0)"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import datetime as dt\n",
-    "\n",
-    "date = '20070308'\n",
-    "date = dt.datetime.strptime(date,'%Y%m%d')\n",
-    "date"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": false
@@ -413,7 +256,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2007, 3, 15, 0, 0)"
+       "datetime.datetime(2007, 3, 1, 0, 0)"
       ]
      },
      "execution_count": 3,
@@ -422,7 +265,8 @@
     }
    ],
    "source": [
-    "date += dt.timedelta(weeks=1)\n",
+    "date = '20070301'\n",
+    "date = dt.datetime.strptime(date,'%Y%m%d')\n",
     "date"
    ]
   },
@@ -436,10 +280,33 @@
     {
      "data": {
       "text/plain": [
-       "'20070315'"
+       "datetime.datetime(2007, 3, 8, 0, 0)"
       ]
      },
      "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date += dt.timedelta(weeks=1)\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20070308'"
+      ]
+     },
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -466,10 +333,10 @@
     {
      "data": {
       "text/plain": [
-       "'ipab20070315.xml'"
+       "'ipab20070308.xml'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,6 +355,326 @@
    "outputs": [],
    "source": [
     "sample = extract_xml_strings(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 각 XML에서 원하는 element 뽑기\n",
+    "\n",
+    "App NO, DN, Assignee, Class, Filed date, Country 필요"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "일단 각각 element가 뭔지 보면 (등장 순서대로)  \n",
+    "DN : us-bibliographic-data-application / publication-reference / document-id / doc-number  \n",
+    "APP No : us-bibliographic-data-application / application-reference / documnet-id / doc-number  \n",
+    "Filed date : us-bibliographic-data-application / application-reference / documnet-id / date  \n",
+    "Class : us-bibliographic-data-application / classification-national / main-classification  \n",
+    "__** issue : 3digit에서 0 제거 안 함__  ex) 312/29.1 = 312029001  \n",
+    "Assignee : us-bibliographic-data-application / assignees / addressbook / orgname  \n",
+    "Country : us-bibliographic-data-application / assignees / addressbook / address / country  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "doc1 = sample.next()\n",
+    "doc2 = sample.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "root = et.fromstring(doc1)\n",
+    "root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "list 만들어서 각 정보들 넣은 후, csv로 바꾸자  \n",
+    "dn, app no, assignee, country, date 담은 csv  \n",
+    "dn, app no, class 담은 csv  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for n in root.iter('doc-number'):\n",
+    "    dn = n.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "n = root.iter('doc-number')\n",
+    "dn = n.next().text\n",
+    "appno = (lambda x: x[0:2] + '/' + x[2:8])(n.next().text)\n",
+    "print dn, type(dn), appno, type(appno)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# DN, APP NO, country, date 얻기\n",
+    "dn = root[0][0][0][1].text\n",
+    "appno = (lambda x: x[0:2] + '/' + x[2:8])(root[0][1][0][1].text)\n",
+    "date = (lambda x: x[0:4] + '-' + x[4:6] + '-' + x[6:8])(root[0][1][0][2].text)\n",
+    "\n",
+    "aline = [dn,appno,date]\n",
+    "cline = [dn,appno]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Assignee 얻기 (assignee는 복수일 수 있으니 iter 사용)\n",
+    "for ass in root.iter('assignee'):\n",
+    "    for name in ass.iter(\"orgname\"):\n",
+    "        aline.append(name.text)\n",
+    "    for country in ass.iter(\"country\"):\n",
+    "        aline.append(country.text)\n",
+    "\n",
+    "aline.append('private') if len(aline)==3 else aline\n",
+    "aline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def digitize(cls):\n",
+    "    try :\n",
+    "        return str(int(cls))\n",
+    "    except ValueError:\n",
+    "        return cls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def classmaker(cls,line):\n",
+    "    cls=cls.replace(' ','0')\n",
+    "    if len(cls) < 9:\n",
+    "        for i in range(9-len(cls)):\n",
+    "            cls += '0'\n",
+    "\n",
+    "    line.append(digitize(cls[0:3]))\n",
+    "    if not int(cls[6:9]):\n",
+    "        line.append(digitize(cls[3:6]))\n",
+    "    else:\n",
+    "        sub = (lambda x,y: x + '.' + y)(digitize(cls[3:6]),digitize(cls[6:9]))\n",
+    "        line.append(sub)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Class 얻기 (class는 복수일 수 있으니 iter 사용)\n",
+    "for ass in root.iter('main-classification'):\n",
+    "    rawclass = ass.text\n",
+    "    cline.append(classmaker(rawclass[0:3]))\n",
+    "    if not int(rawclass[6:9]):\n",
+    "        cline.append(classmaker(rawclass[3:6]))\n",
+    "    else:\n",
+    "        sub = (lambda x,y: x + '.' + y)(classmaker(rawclass[3:6]),classmaker(rawclass[6:9]))\n",
+    "        cline.append(sub)\n",
+    "\n",
+    "cline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "02 ~ 04랑 05 ~ 13이 구조적으로 완전 다르네"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class AllEntities:\n",
+    "    def __getitem__(self, key):\n",
+    "        #key is your entity, you can do whatever you want with it here\n",
+    "        return key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "parser = et.XMLParser()\n",
+    "parser._parser.UseForeignDTD(True)\n",
+    "parser.entity = AllEntities()\n",
+    "root = et.fromstring(doc1,parser=parser)\n",
+    "root"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "date = '20070308'  #initializing date\n",
+    "\n",
+    "with open('app_profile.csv', 'wb') as prf, open('app_class.csv', 'wb') as cls:\n",
+    "    prf_writer = csv.writer(prf,quoting=csv.QUOTE_ALL)\n",
+    "    cls_writer = csv.writer(cls,quoting=csv.QUOTE_ALL)\n",
+    "    \n",
+    "    prf_writer.writerow(['number','id','date','assignee','country'])\n",
+    "    cls_writer.writerow(['number','id','mainclass','subclass','further_m','further_s'])\n",
+    "    \n",
+    "    while not date=='20070315':\n",
+    "        filename = 'xmls/ipab'+ date + '.xml'   #making filename\n",
+    "        xml = extract_xml_strings(filename)   #load and split whole xml into app_xmls  \n",
+    "        for doc in xml:\n",
+    "            parser = et.XMLParser()\n",
+    "            parser.parser.UseForeignDTD(True)\n",
+    "            parser.entity = AllEntities()\n",
+    "            root = et.fromstring(doc, parser=parser)\n",
+    "            n = root.iter('doc-number')\n",
+    "            dn = n.next().text\n",
+    "            appno = (lambda x: x[0:2] + '/' + x[2:8])(n.next().text)\n",
+    "            \n",
+    "            n = root.iter('filing-date')\n",
+    "            fdate = (lambda x: x[0:4] + '-' + x[4:6] + '-' + x[6:8])(n.next().text)\n",
+    "            \n",
+    "            aline = [dn,appno,fdate]\n",
+    "            cline = [dn,appno]\n",
+    "            \n",
+    "            for ass in root.iter('assignee'):   #using iter because of multi-assignee apps \n",
+    "                name = ass.iter(\"organization-name\").next().text\n",
+    "                country = ass.iter(\"country-code\").next().text\n",
+    "                aline.append(name)\n",
+    "                aline.append(country)\n",
+    "                \n",
+    "            aline.append('private') if len(aline)==3 else aline\n",
+    "            \n",
+    "            for cls in root.iter('uspc'):  #using iter because of multi-class apps\n",
+    "                rawclass = cls[0].text + cls[1].text\n",
+    "                classmaker(rawclass,cline)           \n",
+    "                          \n",
+    "            prf_writer.writerow(aline)\n",
+    "            cls_writer.writerow(cline)\n",
+    "        \n",
+    "        date = dt.datetime.strptime(date,'%Y%m%d')   #Let's move on to next xml\n",
+    "        date += dt.timedelta(weeks=1)\n",
+    "        date = date.strftime('%Y%m%d')            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "date = '20070315'  #initializing date\n",
+    "\n",
+    "with open('app_profile.csv', 'ab') as prf, open('app_class.csv', 'ab') as cls:\n",
+    "    prf_writer = csv.writer(prf,quoting=csv.QUOTE_ALL)\n",
+    "    cls_writer = csv.writer(cls,quoting=csv.QUOTE_ALL)\n",
+    "    \n",
+    "    while not date=='20070329':\n",
+    "        filename = 'xmls/ipab'+ date + '.xml'   #making filename\n",
+    "        xml = extract_xml_strings(filename)   #load and split whole xml into app_xmls  \n",
+    "        for doc in xml:\n",
+    "            root = et.fromstring(doc)\n",
+    "            n = root.iter('doc-number')\n",
+    "            dn = n.next().text\n",
+    "            appno = (lambda x: x[0:2] + '/' + x[2:8])(n.next().text)\n",
+    "            fdate = (lambda x: x[0:4] + '-' + x[4:6] + '-' + x[6:8])(root[0][1][0][2].text)\n",
+    "                \n",
+    "            aline = [dn,appno,fdate]\n",
+    "            cline = [dn,appno]\n",
+    "            \n",
+    "            for ass in root.iter('assignee'):   #using iter because of multi-assignee apps \n",
+    "                name = ass.iter(\"orgname\").next().text\n",
+    "                country = ass.iter(\"country\").next().text\n",
+    "                aline.append(name)\n",
+    "                aline.append(country)\n",
+    "                \n",
+    "            aline.append('private') if len(aline)==3 else aline\n",
+    "            \n",
+    "            for cls in root.iter('main-classification'):  #using iter because of multi-class apps\n",
+    "                rawclass = cls.text\n",
+    "                classmaker(rawclass,cline)\n",
+    "            \n",
+    "            for cls in root.iter('further-classification'):  #using iter because of multi-class apps\n",
+    "                rawclass = cls.text\n",
+    "                classmaker(rawclass,cline)\n",
+    "                          \n",
+    "            prf_writer.writerow(aline)\n",
+    "            cls_writer.writerow(cline)\n",
+    "        \n",
+    "        date = dt.datetime.strptime(date,'%Y%m%d')   #Let's move on to next xml\n",
+    "        date += dt.timedelta(weeks=1)\n",
+    "        date = date.strftime('%Y%m%d')     "
    ]
   }
  ],
