--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -463,7 +463,7 @@
     "            cls += '0'\n",
     "\n",
     "    line.append(digitize(cls[0:3]))\n",
-    "    if not int(cls[6:9]):\n",
+    "    if digitize(cls[6:9])=='0':\n",
     "        line.append(digitize(cls[3:6]))\n",
     "    else:\n",
     "        sub = (lambda x,y: x + '.' + y)(digitize(cls[3:6]),digitize(cls[6:9]))\n",
