--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -445,6 +445,8 @@
     "    try :\n",
     "        return str(int(cls))\n",
     "    except ValueError:\n",
+    "        if cls[0] == '0':\n",
+    "            cls=cls.replace('0','')\n",
     "        return cls"
    ]
   },
