--- a/Get app profiles from USPTO XMLs.ipynb
+++ b/Get app profiles from USPTO XMLs.ipynb
@@ -125,7 +125,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -133,6 +133,8 @@
     "    try :\n",
     "        return str(int(cls))\n",
     "    except ValueError:\n",
+    "        if cls[0] == '0':\n",
+    "            cls=cls.replace('0','')\n",
     "        return cls"
    ]
   },
@@ -181,24 +183,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: '00R'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-9a5d482702fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0mcls\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mroot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'uspc'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m  \u001b[1;31m#using iter because of multi-class apps\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m                 \u001b[0mrawclass\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mcls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m                 \u001b[0mclassmaker\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrawclass\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m             \u001b[0mprf_writer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maline\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-4-e7e923428fe2>\u001b[0m in \u001b[0;36mclassmaker\u001b[0;34m(cls, line)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdigitize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0mline\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdigitize\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '00R'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "date = '20020103'  #initializing date\n",
     "\n",
@@ -228,8 +217,9 @@
     "            cline = [dn,appno]\n",
     "            \n",
     "            for ass in root.iter('assignee'):   #using iter because of multi-assignee apps \n",
-    "                name = ass.iter(\"organization-name\").next().text\n",
-    "                aline.append(name)\n",
+    "                for n in ass.iter(\"organization-name\"):    #to deal with name-missed assignees\n",
+    "                    name = n.text\n",
+    "                    aline.append(name)\n",
     "                \n",
     "                for n in ass.iter(\"country-code\"):    #to deal with country-missed assignees\n",
     "                    country = n.text\n",
@@ -284,8 +274,9 @@
     "            cline = [dn,appno]\n",
     "            \n",
     "            for ass in root.iter('assignee'):   #using iter because of multi-assignee apps \n",
-    "                name = ass.iter(\"orgname\").next().text\n",
-    "                aline.append(name)\n",
+    "                for n in ass.iter(\"orgname\"):    #to deal with name-missed assignees\n",
+    "                    name = n.text\n",
+    "                    aline.append(name)\n",
     "                \n",
     "                for n in ass.iter(\"country\"):    #to deal with country-missed assignees\n",
     "                    country = n.text\n",
