unicode 문제 수정, classmaker 보완 3 (missing 처리)
17.8.3

--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -18,12 +18,16 @@
    },
    "outputs": [],
    "source": [
+    "#-*- coding: utf-8 -*-\n",
     "import os\n",
     "import re\n",
     "import csv\n",
+    "import sys\n",
     "import xml.etree.ElementTree as et\n",
     "import datetime as dt\n",
     "\n",
+    "reload(sys)\n",
+    "sys.setdefaultencoding('utf-8')  # to process name of assignee in unicode \n",
     "os.chdir('J:/data')"
    ]
   },
@@ -531,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -588,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
