--- a/Exploring data.ipynb
+++ b/Exploring data.ipynb
@@ -15,11 +15,17 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import csv\n",
     "import os\n",
     "\n",
     "os.chdir('E:/apps')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Application"
    ]
   },
   {
@@ -31,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -44,20 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['id', 'patent_id', 'type', 'number', 'country', 'date']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "header1"
    ]
@@ -71,20 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['07/469540', '5180907', 'NA', 'NA', '', '1901-06-03']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "csv_patent_reader1.next()"
    ]
@@ -98,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -111,28 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['id',\n",
-       " 'type',\n",
-       " 'number',\n",
-       " 'country',\n",
-       " 'date',\n",
-       " 'abstract',\n",
-       " 'title',\n",
-       " 'granted',\n",
-       " 'num_claims']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "header2"
    ]
@@ -147,28 +118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1994/8537802',\n",
-       " 'utility',\n",
-       " '85/37802',\n",
-       " 'US',\n",
-       " '1994-05-05',\n",
-       " 'The present invention relates to a polynucleic acid composition comprising or consisting of at least one polynucleic acid containing 8 or more contiguous nucleotides corresponding to a nucleotide sequence from the region spanning positions 417 to 957 of the Core/E1 region of HCV type 3; and/or the region spanning positions 4664 to 4730 of the NS3 region of HCV type 3; and/or the region spanning positions 4892 to 5292 of the NS3/4 region of HCV type 3; and/or the region spanning positions 8 023 to 8 235 of the NS5 region of the BR36 subgroup of HCV type 3a; and/or the coding region of HCV type 4a starting at nucleotide 379 in the core region; and/or the coding region of HCV type 4; and/or the coding region of HCV type 5, with said nucleotide numbering being with respect to the numbering of HCV nucleic acids as shown in Table 1, and with said polynucleic acids containing at least one nucleotide difference with known HCV type 1, and/or HCV type 2 genomes in the above-indicated regions, or the complement thereof. ',\n",
-       " 'HEPATITIS-C VIRUS TYPE 4, 5 AND 6',\n",
-       " '0',\n",
-       " '29']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "tsv_reader.next()"
    ]
@@ -189,31 +143,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['pub_no',\n",
-       " 'appl_id',\n",
-       " 'claim_no',\n",
-       " 'ind_flg',\n",
-       " 'cnx_flg',\n",
-       " 'word_ct',\n",
-       " 'char_ct',\n",
-       " 'or_ct',\n",
-       " 'sf_ct',\n",
-       " 'cns_ct']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_patent1 = open('app_claims_stats.csv')\n",
     "csv_patent_reader1 = csv.reader(csv_patent1)\n",
@@ -230,22 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['20010000001', '09725796', '7', '0', '0', '20', '112', '1', '1', '1']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_patent_reader1.next()"
    ]
@@ -259,20 +184,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['number', 'id', 'mainclass', 'subclass', 'further_m', 'further_s']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "csv_patent1 = open('app_class.csv')\n",
     "csv_patent_reader1 = csv.reader(csv_patent1)\n",
@@ -289,20 +205,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['20020000002', '09/888723', '2', '239']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "csv_patent_reader1.next()"
    ]
@@ -323,20 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['number', 'id', 'date', 'assignee', 'country']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_patent1 = open('app_profile.csv')\n",
     "csv_patent_reader1 = csv.reader(csv_patent1)\n",
@@ -353,20 +249,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['20020000002', '09/888723', '2001-06-25', 'private']"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_patent_reader1.next()"
    ]
@@ -380,35 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['appl_id',\n",
-       " 'pubno',\n",
-       " 'patent',\n",
-       " 'nber',\n",
-       " 'uspc',\n",
-       " 'uspc_sub',\n",
-       " 'appl_dt',\n",
-       " 'prior_dt',\n",
-       " 'pub_dt',\n",
-       " 'disp_dt',\n",
-       " 'disp_ty',\n",
-       " 'exp_dt',\n",
-       " 'exp_dt_max',\n",
-       " 'pta']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "csv_patent1 = open('historical_masterfile.csv')\n",
     "csv_patent_reader1 = csv.reader(csv_patent1)\n",
@@ -425,35 +287,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "csv_patent_reader1.next()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Litigation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### documents.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['08186218',\n",
-       " '',\n",
-       " '5448746',\n",
-       " '22',\n",
-       " '712',\n",
-       " '210',\n",
-       " '25jan1994',\n",
-       " '29mar1991',\n",
-       " '',\n",
-       " '05sep1995',\n",
-       " 'ISS',\n",
-       " '04sep2012',\n",
-       " '',\n",
-       " '0']"
+       "['case_row_id',\n",
+       " 'case_number',\n",
+       " 'doc_count',\n",
+       " 'attachment',\n",
+       " 'date_filed',\n",
+       " 'long_description',\n",
+       " 'doc_number',\n",
+       " 'short_description',\n",
+       " 'upload_date']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "csv_patent1 = open('litigation/documents.csv')\n",
+    "csv_patent_reader1 = csv.reader(csv_patent1)\n",
+    "header = csv_patent_reader1.next()\n",
+    "header"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "case_id / case_number / date / description 알 수 있음"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['14',\n",
+       " '0:92-cv-00398-MJP',\n",
+       " '8',\n",
+       " '',\n",
+       " '1994-03-18',\n",
+       " 'MOTION by plaintiff AD-TECK LIMITED, plaintiff Peter Philipp, plaintiff Larry Brittain, plaintiff Robert M. Spargo Sr., plaintiff Ulf Boshamer to quash noticed depositions of certain individuals (former empl) (Entered: 03/21/1994)',\n",
+       " '55',\n",
+       " '',\n",
+       " '']"
+      ]
+     },
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "csv_patent_reader1.next()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "글쎄... 여기서 원고가 어떤 patent, 기술 바탕으로 피고를 고소했는지 알 수는 없네..."
    ]
   }
  ],
