app profile에 granted dummy 붙이기
17.8.25

--- a/for_test.ipynb
+++ b/for_test.ipynb
@@ -25,6 +25,8 @@
     "import sys\n",
     "import xml.etree.ElementTree as et\n",
     "import datetime as dt\n",
+    "import numpy as np\n",
+    "import math\n",
     "\n",
     "reload(sys)\n",
     "sys.setdefaultencoding('utf-8')  # to process name of assignee in unicode \n",
@@ -34,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "f=open('sample.xml', 'r')\n",
@@ -58,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "endtag"
@@ -67,7 +73,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "endtag_regex.findall(line)"
@@ -76,7 +84,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "endtag = endtag_regex.findall(line) if not endtag else endtag\n",
@@ -86,7 +96,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "not endtag"
@@ -95,7 +107,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "doc"
@@ -115,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "terminate.findall(line)"
@@ -131,7 +147,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "if not endtag == True:\n",
@@ -184,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sample = extract_xml_strings('sample.xml')"
@@ -193,7 +213,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for x in sample:\n",
@@ -233,7 +255,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "date = '20070301'\n",
@@ -244,7 +268,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "date += dt.timedelta(weeks=1)\n",
@@ -254,7 +280,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "date=date.strftime('%Y%m%d')\n",
@@ -271,7 +299,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filename = 'ipab'+ date + '.xml'\n",
@@ -317,7 +347,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "doc1 = sample.next()\n",
@@ -327,7 +359,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "root = et.fromstring(doc1)\n",
@@ -358,7 +392,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "n = root.iter('doc-number')\n",
@@ -370,7 +406,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# DN, APP NO, country, date 얻기\n",
@@ -385,7 +423,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Assignee 얻기 (assignee는 복수일 수 있으니 iter 사용)\n",
@@ -441,7 +481,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Class 얻기 (class는 복수일 수 있으니 iter 사용)\n",
@@ -481,7 +523,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "parser = et.XMLParser()\n",
@@ -494,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "date = '20070308'  #initializing date\n",
@@ -549,7 +595,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "date = '20070315'  #initializing date\n",
@@ -595,6 +643,144 @@
     "        date = dt.datetime.strptime(date,'%Y%m%d')   #Let's move on to next xml\n",
     "        date += dt.timedelta(weeks=1)\n",
     "        date = date.strftime('%Y%m%d')     "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# numpy로 grant dummy 처리하기"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "merge 후 granted_dum_i, granted_dum_i 중 __하나만 NaN 일 때__ 정상  \n",
+    "둘 다 NaN일 경우 (matching 실패) or 둘 다 NaN 아닐 경우 (matching 중복) 처리 필요  \n",
+    "=> numpy array로 처리 후 다시 갖다 붙이자"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([(  1.,  nan), (  0.,  nan), ( nan,  nan), ( nan,  nan),\n",
+       "       ( nan,   0.), ( nan,   1.), ( nan,   2.), (  1.,   1.),\n",
+       "       (  0.,   0.), (  1.,   2.), (  0.,   2.), (  1.,   2.),\n",
+       "       (  0.,   2.), (  1.,   1.), (  1.,   0.), (  0.,   1.),\n",
+       "       (  0.,   1.), (  1.,  nan), (  0.,  nan)], \n",
+       "      dtype=[('granted_dum_i', '<f8'), ('granted_dum_n', '<f8')])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dummy 뒷처리\n",
+    "\n",
+    "dum = np.genfromtxt('grtdum_temp.csv',delimiter=',',dtype=float,names=True)\n",
+    "dum\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr=dum[0]\n",
+    "arr[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def granted_dum(arr):\n",
+    "    a = arr[0] + arr[1]\n",
+    "    if math.isnan(a):\n",
+    "        if not math.isnan(arr[0]):\n",
+    "            a = arr[0]\n",
+    "        else:\n",
+    "            a = arr[1] if not math.isnan(arr[1]) else a\n",
+    "            a = np.nan if a==2 else a\n",
+    "     \n",
+    "    else:\n",
+    "        if a==2:\n",
+    "            if arr[0]==arr[1]:\n",
+    "                a=1\n",
+    "            \n",
+    "            else:\n",
+    "                a=0\n",
+    "        \n",
+    "        elif a==3:\n",
+    "            a=1\n",
+    "            \n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "vfunc = np.vectorize(granted_dum)\n",
+    "result = vfunc(dum)\n",
+    "np.savetxt('result.csv', result,delimiter=',', fmt='%1.1f', header='granted_dum', comments='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  1.,   0.,  nan,  nan,   0.,   1.,  nan,   1.,   0.,   1.,   0.,\n",
+       "         1.,   0.,   1.,   1.,   1.,   1.,   1.,   0.])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt('result.csv', result,delimiter=',', fmt='%1.1f', header='granted_dum', comments='')"
    ]
   }
  ],
