--- a/1 patent data processing/3_USPTO Fung merge.ipynb
+++ b/1 patent data processing/3_USPTO Fung merge.ipynb
@@ -14,7 +14,11 @@
     "\n",
     "### merge 방법\n",
     "- USPTO에서 patent_id < 0 인 patent는 중간에 버린 거 => 분석 대상에서 제외\n",
-    "- USPTO(left), FUNG(right)로 left join => assignee 여럿인 patent도 괜찮음"
+    "- USPTO(left), FUNG(right)로 left join => assignee 여럿인 patent도 괜찮음\n",
+    "\n",
+    "### 간단한 assignee profile\n",
+    "- assignee별 특허 개수\n",
+    "- assignee 이름 processing"
    ]
   },
   {
@@ -81,40 +85,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**assignee 몇 개 있나 알아보자**"
+    "** assignee profile **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17474"
+       "assignee\n",
+       "International Business Machines Corporation    5578\n",
+       "Samsung Electronics Co., Ltd.                  3617\n",
+       "Microsoft Corporation                          2985\n",
+       "Panasonic Corporation                          2131\n",
+       "Canon Kabushiki Kaisha                         2033\n",
+       "Kabushiki Kaisha Toshiba                       1937\n",
+       "Sony Corporation                               1923\n",
+       "Intel Corporation                              1564\n",
+       "Hitachi, Ltd.                                  1248\n",
+       "Hewlett-Packard Development Company, L.P.      1233\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ass = df['assignee'].to_frame()\n",
-    "ass.drop_duplicates(inplace=True)\n",
-    "len(ass)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ass.to_csv('patent_assignee_10.csv',index=False)"
+    "counts = df.groupby('assignee').size()\n",
+    "counts.sort_values(ascending=False,inplace=True)\n",
+    "counts[0:10]"
    ]
   },
   {
@@ -122,6 +126,15 @@
    "metadata": {},
    "source": [
     "꼴 보니까 이름 processing 한 번 해야겠네 (어차피 compustat때문에 할거지만!)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts.to_csv('patent_assignee_10.csv')"
    ]
   }
  ],
