uspto hist file에서 patent 추출
17.9.4

--- a/1 patent data processing/1_USPTO Patent selection.ipynb
+++ b/1 patent data processing/1_USPTO Patent selection.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# USPTO Patent selection\n",
     "\n",
-    "### 필요한 USPTO patent만 골라내기\n",
+    "### USPTO hist에서 필요한 USPTO patent만 골라내기\n",
     "1. NBER 2번대(전기전자), 4번대(IT)\n",
     "2. grated year = 2006 ~ 2010\n",
     "3. 일단 2010만 고르기"
@@ -119,7 +119,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('uspto_EE&CC_06_10.csv','rb') as raw,open('uspto_EE&CC_10.csv','wb') as sel:\n",
+    "with open('uspto_hist_EE&CC_06_10.csv','rb') as raw,open('uspto_hist_EE&CC_10.csv','wb') as sel:\n",
     "    reader = csv.reader(raw)\n",
     "    header = reader.next()\n",
     "    \n",
